tdf#139944 Disable navigator in impress and draw master mode

Change-Id: I48ed310f7903502085da2469f546d371960935f2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/111986
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>